--- a/Web/Index.html
+++ b/Web/Index.html
@@ -157,7 +157,6 @@
             <div class="organic-goodness-text">
                 <h3>100% organic goodness</h3>
                 <p>Where we do things differently. 100% organic smoothies and cold pressed juices is our thing.</p>
-                <p id="link-text">Image from <a href="https://www.freepik.com/" id="hyperlink-text">Freepik</a></p>
             </div>
         </div>
 
@@ -174,6 +173,11 @@
         </div>
     </section>
 
+    <section>
+        <div class="subscribe-form">
+            <p id="subscribe-form-main-text">Subscribe And Follow Us</p>
+        </div>
+    </section>
 
     <main>
 
