--- a/Web/Index.html
+++ b/Web/Index.html
@@ -11,6 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Healthy Organic Food</title>
     <link rel="stylesheet" href="styles/styles.css">
+
 </head>
 <body>
     <header>
@@ -32,106 +33,118 @@
             </div>
         </div>
     </header>
+
     <section class="our-menu">
         <span>our menu</span>
         <h2>Delicious From The Chef</h2>
         <div class="menu-items">
-            <div class="menu-item">
-                <h3>PEAR SALAD / $11</h3>
-                <p>Reid's Orchard Pears / Bitter Greens / Granola / Big Firefly / Farms Black and Blue / Pine Nut Vinaigrette</p>
+            <div class="col1">
+                <div class="menu-item">
+                    <h3>PEAR SALAD / $11</h3>
+                    <p>Reid's Orchard Pears / Bitter Greens / Granola / Big Firefly / Farms Black and Blue / Pine Nut Vinaigrette</p>
+                </div>
+                <div class="menu-item">
+                    <h3>FARM GREENS / $9</h3>
+                    <p>Honey Vinaigrette / House Cheese Crouton / Fine Herbs</p>
+                </div>
+                <div class="menu-item">
+                    <h3>RICOTTA GNUD / $18</h3>
+                    <p>Marinated Sardine / Red Currant / Chanterelles / Pine Nuts / Mantecato Vitello / Fennel / Olive / Pepitas</p>
+                </div>
             </div>
-            <div class="menu-item">
-                <h3>BRODETTO DI PESCE / $9</h3>
-                <p>Adriatic Seafood Soup / Clams / Prawns / Livornese / Langoustine Scallop / Celery / Olive</p>
+            <div class="col2">
+                <div class="menu-item">
+                    <h3>BRODETTO DI PESCE / $9</h3>
+                    <p>Adriatic Seafood Soup / Clams / Prawns / Livornese / Langoustine Scallop / Celery / Olive</p>
+                </div>
+                <div class="menu-item">
+                    <h3>GRILLED KALE / $9</h3>
+                    <p>Bitter Greens / House Cheese Crouton / Kamon Iberico</p>
+                </div>
+                <div class="menu-item">
+                    <h3>CANESTRELLI / $18</h3>
+                    <p>Reid Orchatd Pears / Bitter Greens / House Cheese Crouton / Marinated Sardine / Chanterelles / Clams</p>
+                </div>
             </div>
-            <div class="menu-item">
-                <h3>FARM GREENS / $9</h3>
-                <p>Honey Vinaigrette / House Cheese Crouton / Fine Herbs</p>
-            </div>
-            <div class="menu-item">
-                <h3>GRILLED KALE / $9</h3>
-                <p>Bitter Greens / House Cheese Crouton / Kamon Iberico</p>
-            </div>
-            <div class="menu-item">
-                <h3>RICOTTA GNUD / $18</h3>
-                <p>Marinated Sardine / Red Currant / Chanterelles / Pine Nuts / Mantecato Vitello / Fennel / Olive / Pepitas</p>
-            </div>
-            <div class="menu-item">
-                <h3>CANESTRELLI / $18</h3>
-                <p>Reid Orchatd Pears / Bitter Greens / House Cheese Crouton / Marinated Sardine / Chanterelles / Clams</p>
-            </div>
-
         </div>
     </section>
 
     <section class="salads">
         <div class="salad-items">
-            <div class="salad-item">
-                <div class="salad-image">
-                    <img src="assets/caesar_salad.png">
+            <div class="col1">
+                <div class="salad-item">
+                    <div class="salad-image">
+                        <img src="assets/caesar_salad.png">
+                    </div>
+                    <div class="salad-text">
+                        <h3>Caesar salad</h3>
+                        <h4>$20</h4>
+                        <p>Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
+                    </div>
                 </div>
-
-                <div class="salad-text">
-                    <h3>Caesar salad</h3>
-                    <h4>$20</h4>
-                    <p>Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
-                </div>
-            </div>
-            <div class="salad-item">
-                <div class="salad-image">
-                    <img src="assets/greek_salad.png">
-                </div>
-                <div class="salad-text">
-                    <h3>Greek salad</h3>
-                    <h4>$45</h4>
-                    <p>Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
-                </div>
-            </div>
-            <div class="salad-item">
-                <div class="salad-image">
-                    <img src="assets/mexican_salad.png">
-                </div>
-                <div class="salad-text">
-                    <h3>Mexican salad</h3>
-                    <h4>$13</h4>
-                    <p>Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
+                <div class="salad-item">
+                    <div class="salad-image">
+                        <img src="assets/mexican_salad.png">
+                    </div>
+                    <div class="salad-text">
+                        <h3>Mexican salad</h3>
+                        <h4>$13</h4>
+                        <p>Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
+                    </div>
                 </div>
             </div>
-            <div class="salad-item">
-                <div class="salad-image">
-                    <img src="assets/classic_ricotta.png">
+            <div class="col2">
+                <div class="salad-item">
+                    <div class="salad-image">
+                        <img src="assets/greek_salad.png">
+                    </div>
+                    <div class="salad-text">
+                        <h3>Greek salad</h3>
+                        <h4>$45</h4>
+                        <p>Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
+                    </div>
                 </div>
-                <div class="salad-text">
-                    <h3>Classic Ricotta</h3>
-                    <h4>$24</h4>
-                    <p>Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
+                
+                <div class="salad-item">
+                    <div class="salad-image">
+                        <img src="assets/classic_ricotta.png">
+                    </div>
+                    <div class="salad-text">
+                        <h3>Classic Ricotta</h3>
+                        <h4>$24</h4>
+                        <p>Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-
+    
     <section>
         <div class="musli"></div>
-        <div class="spaghetti">
-            <div class="spaghetti-item">
-                <h3>lasagna</h3>
-                <h4>$20</h4>
-                <p>Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
+        <div class="pasta">
+            <div class="col1">
+                <div class="pasta-item">
+                    <h3>lasagna</h3>
+                    <h4>$20</h4>
+                    <p>Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
+                </div>
+                <div class="pasta-item">
+                    <h3>bolognese</h3>
+                    <h4>$13</h4>
+                    <p>Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
+                </div>
             </div>
-            <div class="spaghetti-item">
-                <h3>carbonara</h3>
-                <h4>$45</h4>
-                <p>Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
-            </div>
-            <div class="spaghetti-item">
-                <h3>bolognese</h3>
-                <h4>$13</h4>
-                <p>Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
-            </div>
-            <div class="spaghetti-item">
-                <h3>classic ricotta</h3>
-                <h4>$24</h4>
-                <p>Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
+            <div class="col2">
+                <div class="pasta-item">
+                    <h3>carbonara</h3>
+                    <h4>$45</h4>
+                    <p>Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
+                </div>
+                <div class="pasta-item">
+                    <h3>classic ricotta</h3>
+                    <h4>$24</h4>
+                    <p>Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
+                </div>
             </div>
         </div>
 
@@ -161,21 +174,47 @@
         </div>
 
         <div class="people">
-            <div class="people-image">
-                <img src="assets/frank.jpg">
+            <div id="1">
+                <div class="people-image">
+                    <img src="assets/frank.jpg">
+                </div>
+                <div class="people-text">
+                    <p>"Aenean pulvinar dui ornare, feugiat lorem non, ultrices justo. Mauris efficitur, mauris in auctor euismod, quam elit ultrices urna, eget eleifend arcu risus id metus. Maecenas ex enim, mattis eu velit vitae, blandit mattis sapien. Sed aliquam leo et semper vestibulum."</p>
+                </div>
+                <div class="people-name">
+                    <p>frank kinney</p>
+                </div>
             </div>
-            <div class="people-text">
-                <p>"Aenean pulvinar dui ornare, feugiat lorem non, ultrices justo. Mauris efficitur, mauris in auctor euismod, quam elit ultrices urna, eget eleifend arcu risus id metus. Maecenas ex enim, mattis eu velit vitae, blandit mattis sapien. Sed aliquam leo et semper vestibulum."</p>
+            <div id="2">
+                <div class="people-image">
+                    <img src="assets/mary.jpg">
+                </div>
+                <div class="people-text">
+                    <p>"Aenean pulvinar dui ornare, feugiat lorem non, ultrices justo. Mauris efficitur, mauris in auctor euismod, quam elit ultrices urna, eget eleifend arcu risus id metus. Maecenas ex enim, mattis eu velit vitae, blandit mattis sapien. Sed aliquam leo et semper vestibulum."</p>
+                </div>
+                <div class="people-name">
+                    <p>mary smith</p>
+                </div>
             </div>
-            <div class="people-name">
-                <p>frank kinney</p>
-            </div>
+
+            <a class="prev" onclick="ChangeSlide()">❮</a>
+            <a class="next" onclick="ChangeSlide()">❯</a>
+        </div>
+
+        <div id="dot-div">
+            <span class="dot"></span>
+            <span class="dot"></span> 
         </div>
     </section>
 
     <section>
-        <div class="subscribe-form">
-            <p id="subscribe-form-main-text">Subscribe And Follow Us</p>
+        <div class="form-div">
+            <div class="subscribe-form">
+                <p id="subscribe-form-main-text">Subscribe And Follow Us</p>
+                <p>Be part of the story and follow us on Twitter via <a href="#" id="twitter-handle">@name</a> and subscribe to the newsletter for news and updates about our workshops</p>
+                <input id="form-input" placeholder="Email">
+                <button id="form-button">Subscribe</button>
+            </div>
         </div>
     </section>
 
@@ -183,7 +222,10 @@
 
     </main>
     <footer>
-
+        <div class="footer-div">
+            <p>Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
+        </div>
     </footer>
 </body>
+<script src="index.js"></script>
 </html>
